load-tests/http_server/deployment/deployment-patch.yaml
apiVersion: "apps/v1"
kind: Deployment
metadata:
  name: no-name
spec:
  template:
    spec:
      containers:
      - name: "http-server-deployment"
        imagePullPolicy: Always
